--- a/index.html
+++ b/index.html
@@ -107,16 +107,24 @@
           <ul class="field-action-list">
             <li class="field-action-item">
               <img src="./image/what-we-doing1.jpg" alt="Веб-разработка" width="370" />
+              <div class="field-add-title">
+                <h3 class="field-title">Десктопні додатки</h3>
+              </div>
             </li>
             <li class="field-action-item">
               <img
                 src="./image/what-we-doing2.jpg"
                 alt="Разработка под мобильные платформы"
-                width="370"
-              />
+                width="370"/>
+                <div class="field-add-title">
+                  <h3 class="field-title">Мобільні додатки</h3>
+                </div>
             </li>
             <li class="field-action-item">
               <img src="./image/what-we-doing3.jpg" alt="Разработка дизайна" width="370" />
+              <div class="field-add-title">
+                <h3 class="field-title">Дизайнерські рішення</h3>
+              </div>
             </li>
           </ul>
         </div>
