--- a/portfolio.html
+++ b/portfolio.html
@@ -58,8 +58,7 @@
                   src="./image/website-1.jpg"
                   alt="Пример Веб-сайта"
                   width="370"
-                  class="example-image"
-                />
+                  class="example-image"/>
                 <div class="card-bottom">
                   <h2 class="prtfi-sub-title">Технокряк</h2>
                   <p class="examples-text">Веб-сайт</p>
