--- a/portfolio.html
+++ b/portfolio.html
@@ -53,12 +53,13 @@
           </ul>
           <ul class="examples-list">
             <li class="example-cards">
-              <a class="example-card-link" href="#"
-                ><img
-                  src="./image/website-1.jpg"
-                  alt="Пример Веб-сайта"
-                  width="370"
-                  class="example-image"/>
+              <a class="example-card-link" href="#"> 
+                <div class="overlay-box">
+                <img src="./image/website-1.jpg" alt="Пример Веб-сайта"  width="370" class="example-image"/>
+                <div class="overlay">
+                  <p class="examples-overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                </div>
+              </div>
                 <div class="card-bottom">
                   <h2 class="prtfi-sub-title">Технокряк</h2>
                   <p class="examples-text">Веб-сайт</p>
@@ -66,13 +67,13 @@
               </a>
             </li>
             <li class="example-cards">
-              <a class="example-card-link" href="#"
-                ><img
-                  src="./image/desing-1.jpg"
-                  alt="Пример дизайна"
-                  width="370"
-                  class="example-image"
-                />
+              <a class="example-card-link" href="#"> 
+                <div class="overlay-box">
+                <img src="./image/desing-1.jpg" alt="Пример дизайна" width="370" class="example-image"/>
+                <div class="overlay">
+                  <p class="examples-overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                </div>
+              </div> 
                 <div class="card-bottom">
                   <h2 class="prtfi-sub-title">
                     Постер <span lang="en">New Orlean vs Golden Star</span>
@@ -82,13 +83,12 @@
               </a>
             </li>
             <li class="example-cards">
-              <a class="example-card-link" href="#"
-                ><img
-                  src="./image/app-1.jpg"
-                  alt="Пример Приложения"
-                  width="370"
-                  class="example-image"
-                />
+              <a class="example-card-link" href="#"><div class="overlay-box">
+                <img src="./image/app-1.jpg" alt="Пример Приложения" width="370" class="example-image"/>
+                  <div class="overlay">
+                    <p class="examples-overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                  </div>
+                </div> 
                 <div class="card-bottom">
                   <h2 class="prtfi-sub-title">Ресторан <span lang="en">Seafood</span></h2>
                   <p class="examples-text">Приложение</p>
@@ -96,13 +96,13 @@
               </a>
             </li>
             <li class="example-cards">
-              <a class="example-card-link" href="#"
-                ><img
-                  src="./image/marketing-1.jpg"
-                  alt="Пример Маркетинга"
-                  width="370"
-                  class="example-image"
-                />
+              <a class="example-card-link" href="#">
+                <div class="overlay-box">
+                <img src="./image/marketing-1.jpg" alt="Пример Маркетинга" width="370" class="example-image"/>
+                  <div class="overlay">
+                  <p class="examples-overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                </div>
+              </div> 
                 <div class="card-bottom">
                   <h2 class="prtfi-sub-title">Проект <span lang="en">Prime</span></h2>
                   <p class="examples-text">Маркетинг</p>
@@ -110,13 +110,13 @@
               </a>
             </li>
             <li class="example-cards">
-              <a class="example-card-link" href="#"
-                ><img
-                  src="./image/app-2.jpg"
-                  alt="Пример Приложения"
-                  width="370"
-                  class="example-image"
-                />
+              <a class="example-card-link" href="#">
+                <div class="overlay-box">
+                <img src="./image/app-2.jpg" alt="Пример Приложения" width="370" class="example-image"/>
+                  <div class="overlay">
+                  <p class="examples-overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                </div>
+              </div> 
                 <div class="card-bottom">
                   <h2 class="prtfi-sub-title">Проект <span lang="en">Boxes</span></h2>
                   <p class="examples-text">Приложение</p>
@@ -124,13 +124,13 @@
               </a>
             </li>
             <li class="example-cards">
-              <a class="example-card-link" href="#"
-                ><img
-                  src="./image/website-1.jpg"
-                  alt="Пример Веб-сайта"
-                  width="370"
-                  class="example-image"
-                />
+              <a class="example-card-link" href="#">
+                <div class="overlay-box">
+                <img src="./image/website-1.jpg" alt="Пример Веб-сайта" width="370" class="example-image"/>
+                <div class="overlay">
+                  <p class="examples-overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                </div>
+              </div> 
                 <div class="card-bottom">
                   <h2 class="prtfi-sub-title" lang="en">Inspiration has no Borders</h2>
                   <p class="examples-text">Веб-сайт</p>
@@ -138,13 +138,13 @@
               </a>
             </li>
             <li class="example-cards">
-              <a class="example-card-link" href="#"
-                ><img
-                  src="./image/desing-2.jpg"
-                  alt="Пример дизайна"
-                  width="370"
-                  class="example-image"
-                />
+              <a class="example-card-link" href="#">
+                <div class="overlay-box">
+                <img src="./image/desing-2.jpg" alt="Пример дизайна" width="370" class="example-image"/>
+                <div class="overlay">
+                  <p class="examples-overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                </div>
+              </div> 
                 <div class="card-bottom">
                   <h2 class="prtfi-sub-title">Издание <span lang="en">Limited Edition</span></h2>
                   <p class="examples-text">Дизайн</p>
@@ -152,13 +152,13 @@
               </a>
             </li>
             <li class="example-cards">
-              <a class="example-card-link" href="#"
-                ><img
-                  src="./image/marketing-2.jpg"
-                  alt="Пример Маркетинга"
-                  width="370"
-                  class="example-image"
-                />
+              <a class="example-card-link" href="#">
+                <div class="overlay-box">
+                <img src="./image/marketing-2.jpg" alt="Пример Маркетинга" width="370" class="example-image"/>
+                  <div class="overlay">
+                  <p class="examples-overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                </div>
+              </div> 
                 <div class="card-bottom">
                   <h2 class="prtfi-sub-title">Проект <span lang="en">LAB</span></h2>
                   <p class="examples-text">Маркетинг</p>
@@ -167,12 +167,12 @@
             </li>
             <li class="example-cards">
               <a class="example-card-link" href="#">
-                <img
-                  src="./image/app-3.jpg"
-                  alt="Пример Приложения"
-                  width="370"
-                  class="example-image"
-                />
+                <div class="overlay-box">
+                <img src="./image/app-3.jpg" alt="Пример Приложения" width="370" class="example-image"/>
+                  <div class="overlay">
+                  <p class="examples-overlay-text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                </div>
+              </div> 
                 <div class="card-bottom">
                   <h2 class="prtfi-sub-title" lang="en">Growing Business</h2>
                   <p class="examples-text">Приложение</p>
@@ -222,3 +222,8 @@
     </footer>
   </body>
 </html>
+
+
+
+
+
